# angfloat

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
spec/: main.typ  refs.yml
src/: angle.rs  binary16c.rs  control_and_status.rs  exponent.rs  float.rs  lib.rs  mantissa.rs
