[package]
name = "angfloat"
version = "0.0.0"
resolver = "2"
edition = "2021"
rust-version = "1.78"
readme = "README.md"
license = "Apache-2.0 WITH LLVM-exception"
keywords = ["float", "no-std"]
categories = ["mathematics", "no-std", "no-std::no-alloc"]

[features]
default = ["std"]
std = ["bitflags/std"]

[dependencies]
bitflags = { version = "2.5.0", default-features = false }
