[package]
name = "angfloat"
authors = ["Laine Taffin Altman"]
version = "0.0.0"
resolver = "3"
edition = "2024"
rust-version = "1.86"
readme = "README.md"
license = "Apache-2.0 OR MIT"
keywords = ["float", "no-std"]
categories = ["mathematics", "no-std", "no-std::no-alloc"]

[features]

[dependencies.num-traits]
version = "0.2.19"
default-features = false
